# docker-compose-diagram

./: .flake8  .pre-commit-config.yaml  LICENSE.md  Makefile  README.md  embed_images.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: codeql-analysis.yml  publish.yml  test.yml
compose_diagram/: images.py  labels.py
docker_compose_diagram/: __init__.py  cli.py  constants.py  draw.py  facade.py  images.py  labels.py
docker_compose_diagram/di_container/: facade.py  terminal.py
docker_compose_diagram/docker_compose/: services.py
docker_compose_diagram/docker_compose/constants/: labels.py  messages.py
docker_compose_diagram/docker_compose/entities/: service.py
docker_compose_diagram/docker_compose/file_reader/: base.py  standard.py
docker_compose_diagram/docker_compose/parser/: base.py  yaml.py
docker_compose_diagram/docker_images/: auto_import_diagrams.py  diagrams_nodes_importer.py  patterns.py  utils.py
docker_compose_diagram/renderer/: base.py  diagrams.py
docker_compose_diagram/renderer/constants/: messages.py
docker_compose_diagram/renderer/plugins/: base.py  diagrams.py
docker_compose_diagram/terminal/: base.py  rich_terminal.py
docs/: README.md  _coverpage.md  _sidebar.md  conf.py  getting_started.rst  index.html  index.rst
docs/getting_started/: getting_started.md
docs/labels/: icons.md
examples/: docker-compose.dev.yml
tests/: test_file_generation.py
