[tool.poetry]
name = "docker-compose-diagram"
version = "0.2.4"
description = ""
authors = ["Skonik <s.konik.dev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
PyYAML = "^5.3.4"
diagrams = "^0.21.0"
click = "^8.0.3"
dockerfile-parse = "^1.2.0"
rich = "^12.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
compose-diagram = 'docker_compose_diagram:process_cli'