[tool.poetry]
name = "docker-compose-diagram"
version = "0.2.5"
description = ""
authors = ["Skonik <s.konik.dev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
PyYAML = "^5.3.4"
diagrams = "0.23.3"
click = "^8.0.3"
dockerfile-parse = "^1.2.0"
rich = "^12.2.0"
safety = "2.3.5"

[tool.poetry.dev-dependencies]
Sphinx = "~4.3.0"
sphinx-rtd-theme = "^1.0.0"
flake8 = "^5.0.4"
bandit = "^1.7.4"
safety = "^2.3.1"
black = "^22.10.0"
isort = "^5.10.1"
pytest = "^7.1.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
compose-diagram = 'docker_compose_diagram:process_cli'